# crate-template

./: README.md
template/: .pre-commit.sh  Cargo.toml  README.md  README.tpl  cargo-generate.toml
template/.github/workflows/: ci.yml
template/src/: lib.rs
